# TaskCalendar

./: .dockerignore  .env.example  .gitignore  AGENTS.md  ARCHITECTURE.md  LICENSE  PROJECT_STATUS.md  README.md  dev.sh  docker-compose.dev.yml  docker-compose.yml  nohup.out  ntut
backend/: .env.example  .env.local  Dockerfile  docker-entrypoint.sh  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 20260511_000001_baseline_current_schema.py  20260514_000002_backfill_default_task_ownership.py  20260517_000001_add_all_day_to_scheduled_tasks.py  20260522_000001_add_user_admin_role.py  20260527_000001_add_user_timezone.py  20260529_000001_scope_app_settings_to_users.py  20260530_000001_add_working_hours_start_to_app_settings.py  20260601_000001_add_week_start_to_app_settings.py  20260701_000001_add_google_calendar_connection.py  20260701_000002_add_google_event_mirrors.py  20260701_000003_add_google_sync_outbox.py  20260701_000004_add_google_outbox_priority_progress.py
backend/app/: main.py
backend/app/admin/: __init__.py  router.py
backend/app/app_settings/: __init__.py  router.py  schemas.py  service.py
backend/app/auth/: dependencies.py  router.py  schemas.py  security.py  service.py
backend/app/backup/: __init__.py  router.py  schemas.py  service.py
backend/tests/: test_admin.py  test_app_settings_service.py  test_auth.py  test_backup_export.py  test_config.py  test_google_calendar.py  test_health.py  test_migrations.py  test_sanity.py  test_task_lists_service.py  test_task_user_isolation.py  test_tasks_service.py
docs/: TODO.md  spec.md  (+12 more)
(+72 files in other folders)
