[project]
name = "calendar-backend"
version = "0.1.0"
description = "FastAPI backend for the scheduled task calendar MVP"
requires-python = ">=3.12"
dependencies = [
  "bcrypt>=4.0.1,<4.1",
  "cryptography>=43.0.0,<47.0.0",
  "fastapi>=0.115.0,<0.136.0",
  "passlib[bcrypt]>=1.7.4",
  "psycopg[binary]>=3.2.0",
  "pydantic-settings>=2.6.0",
  "PyJWT>=2.10.0",
  "sqlalchemy>=2.0.0",
  "uvicorn[standard]>=0.32.0",
]

[project.optional-dependencies]
dev = [
  "alembic>=1.14.0",
  "httpx>=0.27.0",
  "pytest>=8.3.0",
  "ruff>=0.7.0",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.setuptools.packages.find]
include = ["app*"]
